# sandy

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  INSTALL.md  LICENSE  MANIFEST.in  README.md  aaa.py  bbb.py  conftest.py  genindex.html  index.html  make_docs.sh  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirements_conda.txt  requirements_pip.txt  rwf.cp310-win_amd64.pyd  sandy.aleph2.fy_output.html  sandy.aleph2.html  sandy.aleph2.matrix_output.html  sandy.aleph2.output_file.html  sandy.aleph2.xs_output.html  sandy.aleph2.xsfile.html  sandy.constants.html  sandy.core.basecov.html  sandy.core.cov.html  sandy.core.ecov.html  sandy.core.endf6.html  sandy.core.fy.html  sandy.core.html  sandy.core.lpc.html  sandy.core.lpccov.html  sandy.core.pert.html  sandy.core.pfns.html  (+82 more)
Dockerfile/: Dockerfile  dockerfile-build-instructions.txt
Upload/: Perturbation_decay_constant.ipynb
_sources/: index.rst.txt  modules.rst.txt  sandy.aleph2.fy_output.rst.txt  sandy.aleph2.matrix_output.rst.txt  sandy.aleph2.output_file.rst.txt  sandy.aleph2.rst.txt  sandy.aleph2.xs_output.rst.txt  sandy.aleph2.xsfile.rst.txt  sandy.constants.rst.txt  sandy.core.basecov.rst.txt  sandy.core.cov.rst.txt  sandy.core.ecov.rst.txt  sandy.core.endf6.rst.txt  sandy.core.fy.rst.txt  sandy.core.lpc.rst.txt  sandy.core.lpccov.rst.txt  sandy.core.pert.rst.txt  sandy.core.pfns.rst.txt  sandy.core.records.rst.txt  sandy.core.rst.txt  sandy.core.samples.rst.txt  sandy.core.xs.rst.txt  sandy.core.xscov.rst.txt  sandy.data.Cm242.rst.txt  sandy.data.FY.rst.txt  (+72 more)
(+389 files in other folders)
